--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ant-design/icons": "^5.0.1",
     "@ant-design/pro-components": "^2.4.4",
     "@umijs/max": "^4.4.4",
+    "@umijs/max-plugin-openapi": "^2.0.3",
     "antd": "^5.4.0"
   },
   "devDependencies": {
@@ -23,7 +24,6 @@
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.7",
     "prettier-plugin-organize-imports": "^3.2.2",
-    "prettier-plugin-packagejson": "^2.4.3",
-    "typescript": "^5.0.3"
+    "prettier-plugin-packagejson": "^2.4.3"
   }
 }
